# serializer version: 1
# name: TestFetchReachCostEqual.test_snapshot
  1.341854859091886
# ---
# name: TestFetchReachCostEqual.test_snapshot.1
  0.749100508008181
# ---
# name: TestFetchReachCostEqual.test_snapshot.10
  6.9237733523e-05
# ---
# name: TestFetchReachCostEqual.test_snapshot.100
  1.42404183628821
# ---
# name: TestFetchReachCostEqual.test_snapshot.101
  0.730764040033538
# ---
# name: TestFetchReachCostEqual.test_snapshot.102
  0.642286322210547
# ---
# name: TestFetchReachCostEqual.test_snapshot.103
  1.320291640275891
# ---
# name: TestFetchReachCostEqual.test_snapshot.104
  0.767733186111149
# ---
# name: TestFetchReachCostEqual.test_snapshot.105
  0.58295330674865
# ---
# name: TestFetchReachCostEqual.test_snapshot.106
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.107
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.108
  0.001243911729434
# ---
# name: TestFetchReachCostEqual.test_snapshot.109
  -0.024712123324439
# ---
# name: TestFetchReachCostEqual.test_snapshot.11
  -3.253367287e-06
# ---
# name: TestFetchReachCostEqual.test_snapshot.110
  0.017441183843391
# ---
# name: TestFetchReachCostEqual.test_snapshot.111
  0.001227237773144
# ---
# name: TestFetchReachCostEqual.test_snapshot.112
  0.000307621933511
# ---
# name: TestFetchReachCostEqual.test_snapshot.113
  0.125104866644364
# ---
# name: TestFetchReachCostEqual.test_snapshot.114
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.115
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.116
  dict({
    'is_success': 0.0,
    'reference': array([1.42404184, 0.73076404, 0.64228632]),
    'reference_error': array([-0.1037502 ,  0.03696915, -0.05933302]),
    'state_of_interest': array([1.32029164, 0.76773319, 0.58295331]),
  })
# ---
# name: TestFetchReachCostEqual.test_snapshot.12
  -2.196551e-09
# ---
# name: TestFetchReachCostEqual.test_snapshot.13
  5.165812471e-06
# ---
# name: TestFetchReachCostEqual.test_snapshot.14
  4.768824519e-06
# ---
# name: TestFetchReachCostEqual.test_snapshot.15
  -2.318103595e-06
# ---
# name: TestFetchReachCostEqual.test_snapshot.16
  dict({
    'reference': array([1.42404184, 0.73076404, 0.64228632]),
    'reference_error': array([-0.08218698,  0.01833647, -0.10757912]),
    'state_of_interest': array([1.34185486, 0.74910051, 0.5347072 ]),
  })
# ---
# name: TestFetchReachCostEqual.test_snapshot.17
  1.357925981658544
# ---
# name: TestFetchReachCostEqual.test_snapshot.18
  0.745317639669828
# ---
# name: TestFetchReachCostEqual.test_snapshot.19
  0.556593068039252
# ---
# name: TestFetchReachCostEqual.test_snapshot.2
  0.534707204532927
# ---
# name: TestFetchReachCostEqual.test_snapshot.20
  1.42404183628821
# ---
# name: TestFetchReachCostEqual.test_snapshot.21
  0.730764040033538
# ---
# name: TestFetchReachCostEqual.test_snapshot.22
  0.642286322210547
# ---
# name: TestFetchReachCostEqual.test_snapshot.23
  1.357925981658544
# ---
# name: TestFetchReachCostEqual.test_snapshot.24
  0.745317639669828
# ---
# name: TestFetchReachCostEqual.test_snapshot.25
  0.556593068039252
# ---
# name: TestFetchReachCostEqual.test_snapshot.26
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.27
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.28
  0.013848829223198
# ---
# name: TestFetchReachCostEqual.test_snapshot.29
  -0.003211350722573
# ---
# name: TestFetchReachCostEqual.test_snapshot.3
  1.42404183628821
# ---
# name: TestFetchReachCostEqual.test_snapshot.30
  0.01890236791566
# ---
# name: TestFetchReachCostEqual.test_snapshot.31
  8.0188999943e-05
# ---
# name: TestFetchReachCostEqual.test_snapshot.32
  3.0353723624e-05
# ---
# name: TestFetchReachCostEqual.test_snapshot.33
  0.109208274898245
# ---
# name: TestFetchReachCostEqual.test_snapshot.34
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.35
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.36
  dict({
    'is_success': 0.0,
    'reference': array([1.42404184, 0.73076404, 0.64228632]),
    'reference_error': array([-0.06611585,  0.0145536 , -0.08569325]),
    'state_of_interest': array([1.35792598, 0.74531764, 0.55659307]),
  })
# ---
# name: TestFetchReachCostEqual.test_snapshot.37
  1.334797814577837
# ---
# name: TestFetchReachCostEqual.test_snapshot.38
  0.773849916163388
# ---
# name: TestFetchReachCostEqual.test_snapshot.39
  0.574411103108031
# ---
# name: TestFetchReachCostEqual.test_snapshot.4
  0.730764040033538
# ---
# name: TestFetchReachCostEqual.test_snapshot.40
  1.42404183628821
# ---
# name: TestFetchReachCostEqual.test_snapshot.41
  0.730764040033538
# ---
# name: TestFetchReachCostEqual.test_snapshot.42
  0.642286322210547
# ---
# name: TestFetchReachCostEqual.test_snapshot.43
  1.334797814577837
# ---
# name: TestFetchReachCostEqual.test_snapshot.44
  0.773849916163388
# ---
# name: TestFetchReachCostEqual.test_snapshot.45
  0.574411103108031
# ---
# name: TestFetchReachCostEqual.test_snapshot.46
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.47
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.48
  -0.023425623484645
# ---
# name: TestFetchReachCostEqual.test_snapshot.49
  0.024758537692012
# ---
# name: TestFetchReachCostEqual.test_snapshot.5
  0.642286322210547
# ---
# name: TestFetchReachCostEqual.test_snapshot.50
  0.011247720756418
# ---
# name: TestFetchReachCostEqual.test_snapshot.51
  0.0003968793727
# ---
# name: TestFetchReachCostEqual.test_snapshot.52
  0.000709820915167
# ---
# name: TestFetchReachCostEqual.test_snapshot.53
  0.120116333198832
# ---
# name: TestFetchReachCostEqual.test_snapshot.54
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.55
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.56
  dict({
    'is_success': 0.0,
    'reference': array([1.42404184, 0.73076404, 0.64228632]),
    'reference_error': array([-0.08924402,  0.04308588, -0.06787522]),
    'state_of_interest': array([1.33479781, 0.77384992, 0.5744111 ]),
  })
# ---
# name: TestFetchReachCostEqual.test_snapshot.57
  1.309618165955352
# ---
# name: TestFetchReachCostEqual.test_snapshot.58
  0.77337835115882
# ---
# name: TestFetchReachCostEqual.test_snapshot.59
  0.567784623471936
# ---
# name: TestFetchReachCostEqual.test_snapshot.6
  1.341854859091886
# ---
# name: TestFetchReachCostEqual.test_snapshot.60
  1.42404183628821
# ---
# name: TestFetchReachCostEqual.test_snapshot.61
  0.730764040033538
# ---
# name: TestFetchReachCostEqual.test_snapshot.62
  0.642286322210547
# ---
# name: TestFetchReachCostEqual.test_snapshot.63
  1.309618165955352
# ---
# name: TestFetchReachCostEqual.test_snapshot.64
  0.77337835115882
# ---
# name: TestFetchReachCostEqual.test_snapshot.65
  0.567784623471936
# ---
# name: TestFetchReachCostEqual.test_snapshot.66
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.67
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.68
  -0.016901383108812
# ---
# name: TestFetchReachCostEqual.test_snapshot.69
  -0.005267642504836
# ---
# name: TestFetchReachCostEqual.test_snapshot.7
  0.749100508008181
# ---
# name: TestFetchReachCostEqual.test_snapshot.70
  -0.008059342090324
# ---
# name: TestFetchReachCostEqual.test_snapshot.71
  0.001114412840574
# ---
# name: TestFetchReachCostEqual.test_snapshot.72
  4.4311093906e-05
# ---
# name: TestFetchReachCostEqual.test_snapshot.73
  0.143035865991938
# ---
# name: TestFetchReachCostEqual.test_snapshot.74
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.75
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.76
  dict({
    'is_success': 0.0,
    'reference': array([1.42404184, 0.73076404, 0.64228632]),
    'reference_error': array([-0.11442367,  0.04261431, -0.0745017 ]),
    'state_of_interest': array([1.30961817, 0.77337835, 0.56778462]),
  })
# ---
# name: TestFetchReachCostEqual.test_snapshot.77
  1.316225524908442
# ---
# name: TestFetchReachCostEqual.test_snapshot.78
  0.792669426092499
# ---
# name: TestFetchReachCostEqual.test_snapshot.79
  0.563277726352563
# ---
# name: TestFetchReachCostEqual.test_snapshot.8
  0.534707204532927
# ---
# name: TestFetchReachCostEqual.test_snapshot.80
  1.42404183628821
# ---
# name: TestFetchReachCostEqual.test_snapshot.81
  0.730764040033538
# ---
# name: TestFetchReachCostEqual.test_snapshot.82
  0.642286322210547
# ---
# name: TestFetchReachCostEqual.test_snapshot.83
  1.316225524908442
# ---
# name: TestFetchReachCostEqual.test_snapshot.84
  0.792669426092499
# ---
# name: TestFetchReachCostEqual.test_snapshot.85
  0.563277726352563
# ---
# name: TestFetchReachCostEqual.test_snapshot.86
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.87
  0.0
# ---
# name: TestFetchReachCostEqual.test_snapshot.88
  0.009341557161459
# ---
# name: TestFetchReachCostEqual.test_snapshot.89
  0.017523006535174
# ---
# name: TestFetchReachCostEqual.test_snapshot.9
  0.000200232293923
# ---
# name: TestFetchReachCostEqual.test_snapshot.90
  -0.002192581047122
# ---
# name: TestFetchReachCostEqual.test_snapshot.91
  0.000187091590748
# ---
# name: TestFetchReachCostEqual.test_snapshot.92
  0.000604553520519
# ---
# name: TestFetchReachCostEqual.test_snapshot.93
  0.147305777354788
# ---
# name: TestFetchReachCostEqual.test_snapshot.94
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.95
  False
# ---
# name: TestFetchReachCostEqual.test_snapshot.96
  dict({
    'is_success': 0.0,
    'reference': array([1.42404184, 0.73076404, 0.64228632]),
    'reference_error': array([-0.10781631,  0.06190539, -0.0790086 ]),
    'state_of_interest': array([1.31622552, 0.79266943, 0.56327773]),
  })
# ---
# name: TestFetchReachCostEqual.test_snapshot.97
  1.320291640275891
# ---
# name: TestFetchReachCostEqual.test_snapshot.98
  0.767733186111149
# ---
# name: TestFetchReachCostEqual.test_snapshot.99
  0.58295330674865
# ---
